testdata/test/resources/com/yafred/asn1/test/should_fail/assignment_duplicate_name.asn
-- FAILS: assignments have same reference name

My-Module DEFINITIONS ::=

BEGIN

My-Integer ::= SEQUENCE 
{
    a INTEGER
}

My-Integer ::= INTEGER

END
